Fix select center alignment in Chrome

--- a/notex-web/src/components/NoteEditor.scss
+++ b/notex-web/src/components/NoteEditor.scss
@@ -126,6 +126,7 @@ $editor-padding: 0.75rem;
   border-radius: $border-radius;
   font-size: 0.75em;
   text-align: center;
+  text-align-last: center;
 
   &:-moz-focusring {
       color: transparent;
